tests/loops/valid/for_decl.su
s32 main() {
    s32 a = 0;

    for (s32 i = 0; i < 3; i = i + 1)
        a = a + 1;
    return a;
}