tests/loops/invalid/out_of_scope.su
s32 main() {

    while (1) {
        s32 a = 2;
    }

    return a;
}